--- a/packages/src/template_system/package.xml
+++ b/packages/src/template_system/package.xml
@@ -14,6 +14,7 @@
   <depend>std_msgs</depend>
   <depend>ament_index_cpp</depend>
   <depend>yaml-cpp</depend>
+  <exec_depend>yaml-cpp</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
